--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,54 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/** ------------------------------------------------ **
+ * BASE LAYER
+ ** ------------------------------------------------ **/
+@layer base {
+	:root {
+		/* Common Colours */
+		--color-white: 255 255 255;
+
+		/* Dark Variables */
+		--color-dark-1: 7 7 7;
+		--color-dark-2: 28 28 28;
+		--color-dark-3: 35 35 35;
+		--color-dark-content: var(--color-white);
+
+		/* Light Variables */
+		--color-light-1: var(--color-white);
+		--color-light-2: 242 242 242;
+		--color-light-3: 230 230 230;
+		--color-light-content: var(--color-dark-3);
+
+		/* Dark Theme Base Colours */
+		--color-base-1: var(--color-dark-1);
+		--color-base-2: var(--color-dark-2);
+		--color-base-3: var(--color-dark-3);
+		--color-content: var(--color-dark-content);
+
+		/* Light Theme Base Colours */
+		&[data-mode="light"] {
+			--color-base-1: var(--color-light-1);
+			--color-base-2: var(--color-light-2);
+			--color-base-3: var(--color-light-3);
+			--color-content: var(--color-light-content);
+		}
+
+		/* System Theme Overrides */
+		@media (prefers-color-scheme: light) {
+			--color-base-1: var(--color-light-1);
+			--color-base-2: var(--color-light-2);
+			--color-base-3: var(--color-light-3);
+			--color-content: var(--color-light-content);
+
+			&[data-mode="dark"] {
+				--color-base-1: var(--color-dark-1);
+				--color-base-2: var(--color-dark-2);
+				--color-base-3: var(--color-dark-3);
+				--color-content: var(--color-dark-content);
+			}
+		}
+	}
+}
